# ajax-in-plain-sight

./: .env.local.example  ARCHITECTURE.md  DEPLOYMENT.md  PROJECT_COMPLETE.md  README.md  SETUP_COMPLETE.md  package.json  pnpm-lock.yaml  setup.sh
.github/workflows/: deploy.yml  parse-form-4.yml  revalidate-cache.yml  scrape-data.yml  scrape-minutes.yml
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/api/council/: route.ts
app/api/councillors/: route.ts
app/api/councillors/[slug]/: route.ts
app/api/donors/: route.ts
app/api/donors/[personId]/: route.ts
app/api/revalidate/: route.ts
app/api/votes/: route.ts
app/api/votes/[personId]/: route.ts
app/api/webhook/revalidate/: route.ts
app/council/: page.tsx
app/council/[slug]/: page.tsx
app/council/[slug]/donors/: page.tsx
app/council/[slug]/votes/: page.tsx
app/elections/2022/: page.tsx
app/elections/2022/[slug]/: page.tsx
app/register/: page.tsx
components/: header.tsx
lib/: db.ts  supabase.ts
prisma/: schema.prisma
scripts/: 01-create-schema.sql  db_utils.py  minutes.py  parse_form_4.py  pyproject.toml  scrape_minutes.py  seed.py  seed_councillors.py
scripts/scraper/: README.md  extract_votes.py  main.py  pyproject.toml  scrape_minutes.py  seed_councillors.py
