[tool.uv]
name = "scrapers"
version = "0.1.0"
description = "Python scrapers for Ajax Town Council meeting minutes and campaign finance"
requires-python = ">=3.11"

[project]
dependencies = [
    "httpx>=0.24.0",
    "anthropic>=0.7.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
    "pdf2image>=1.16.0",
    "pillow>=10.0.0",
]

[[tool.uv.index]]
name = "anthropic"
url = "https://pypi.org/simple"
